crates/etl-api/tests/routes/snapshots/main__routes__destinations_pipelines__bigquery_destination_and_pipeline_can_be_created-2.snap
---
source: crates/etl-api/tests/routes/destinations_pipelines.rs
assertion_line: 121
expression: response.config
---
ApiPipelineConfig {
    publication_name: "publication",
    replication_slot: Some(
        ReplicationSlotConfig {
            failover: false,
        },
    ),
    batch: Some(
        BatchConfig {
            max_fill_ms: 5,
            memory_budget_ratio: 0.2,
            max_bytes: 8388608,
        },
    ),
    table_error_retry_delay_ms: Some(
        10000,
    ),
    table_error_retry_max_attempts: Some(
        5,
    ),
    max_table_sync_workers: Some(
        2,
    ),
    max_copy_connections_per_table: Some(
        2,
    ),
    memory_refresh_interval_ms: Some(
        100,
    ),
    table_sync_monitor_refresh_interval_ms: Some(
        10000,
    ),
    memory_backpressure: Some(
        MemoryBackpressureConfig {
            activate_threshold: 0.85,
            resume_threshold: 0.75,
        },
    ),
    table_sync_copy: Some(
        IncludeAllTables,
    ),
    invalidated_slot_behavior: Some(
        Error,
    ),
    replicator_resources: None,
    ducklake_maintenance: None,
    log_level: Some(
        Info,
    ),
}
