crates/etl-api/tests/routes/snapshots/main__routes__destinations_pipelines__bigquery_destination_and_pipeline_can_be_created.snap
---
source: crates/etl-api/tests/routes/destinations_pipelines.rs
expression: response.config
---
BigQuery {
    project_id: "project-id",
    dataset_id: "dataset-id",
    max_staleness_mins: None,
    connection_pool_size: Some(
        1,
    ),
    table_options: BigQueryTableOptionsConfig {
        tables: [],
    },
}
