crates/etl-api/tests/routes/snapshots/main__routes__destinations_pipelines__iceberg_supabase_destination_and_pipeline_can_be_created.snap
---
source: crates/etl-api/tests/routes/destinations_pipelines.rs
expression: response.config
---
Iceberg {
    config: Supabase {
        project_ref: "abcdefghijklmnopqrst",
        warehouse_name: "my-warehouse",
        namespace: Some(
            "my-namespace",
        ),
        s3_region: "ap-southeast-1",
    },
}
