crates/etl-api/tests/routes/snapshots/main__routes__destinations_pipelines__snowflake_destination_and_pipeline_can_be_created.snap
---
source: crates/etl-api/tests/routes/destinations_pipelines.rs
expression: response.config
---
Snowflake {
    account_id: "myorg-myaccount",
    user: "etl_user",
    database: "my_database",
    schema: "public",
    role: Some(
        "etl_role",
    ),
}
